test/prism_regression/invalid/missing_node_in_statements.rb
# typed: true
# disable-parser-comparison: true

foo: bar
